fix: restore test headings and CSV label

--- a/exports.html
+++ b/exports.html
@@ -121,7 +121,7 @@
             </select>
           </div>
           <div class="actions">
-            <button class="btn primary" id="exportCsv">Generate Scope 2 CSV</button>
+            <button class="btn primary" id="exportCsv">Generate CSV (Scope 2)</button>
             <button class="btn secondary" id="exportPdf" disabled title="PDF summary coming soon">Generate PDF</button>
             <span class="status" id="exportStatus"></span>
           </div>
