--- a/records.html
+++ b/records.html
@@ -331,7 +331,8 @@
     <aside class="side-nav">
       <a class="nav-brand" href="index.html">CarbonWise</a>
       <nav class="nav-items">
-        <a href="records.html" class="nav-item" data-nav="records">My Records</a>
+        <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
+        <a href="index.html#scope1" class="nav-item" data-nav="scope1-records">Scope 1 Records</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
         <a href="settings.html" class="nav-item" data-nav="settings">Settings</a>
