--- a/index.html
+++ b/index.html
@@ -576,11 +576,11 @@
       <div class="scope1-header">
         <div>
           <h2>Scope 1 (Stationary combustion — Natural gas)</h2>
-          <p class="muted small">Optional early access module for stationary fuel estimates.</p>
+          <p class="muted small">Optional module for stationary fuel estimates.</p>
         </div>
         <label class="scope1-toggle">
           <input type="checkbox" id="scope1-toggle" />
-          <span>Early access</span>
+          <span>Enable Scope 1</span>
         </label>
       </div>
       <div id="scope1-teaser" class="scope1-teaser">
@@ -668,7 +668,7 @@
               <select id="scope1-unit" required>
                 <option value="">Select unit</option>
                 <option value="therms">Therms (US)</option>
-                <option value="m3">Cubic meters (m³)</option>
+                <option value="m3">Cubic meters (m3)</option>
                 <option value="kwh-eq">kWh-equivalent</option>
               </select>
             </div>
@@ -703,7 +703,7 @@
       <ul>
         <li>No uploads. We never ask for bills or PDFs.</li>
         <li>Calculate without an account. Log in only to save or export.</li>
-        <li>No stored personal data. Inputs stay on your device.</li>
+        <li>We only store what you save to your account. No extra personal data.</li>
         <li>Emission factors from EPA / DEFRA — transparent and explainable.</li>
         <li>See our calculation methodology and disclosures at <a href="methodology.html">methodology</a>.</li>
       </ul>
@@ -718,8 +718,8 @@
           <p class="muted">See trends over time and surface anomalies automatically.</p>
         </div>
         <div>
-          <strong>Scope 2 today; Scope 1 planned</strong>
-          <p class="muted">Currently focused on Scope 2 electricity emissions. Scope 1 support planned.</p>
+          <strong>Scope 2 + Scope 1 coverage</strong>
+          <p class="muted">Track Scope 2 electricity and Scope 1 natural gas in one place.</p>
         </div>
         <div>
           <strong>Exportable summaries</strong>
