--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
             <input type="text" id="scope1-notes" maxlength="240" placeholder="Optional context for this entry" />
           </div>
           <div class="cta-row" style="justify-content:flex-start;">
-            <button type="submit" class="btn primary" id="scope1-add">Add Scope 1 entry</button>
+            <button type="submit" class="btn primary" id="scope1-calc">Calculate Scope 1 estimate</button>
           </div>
           <p class="muted small" id="scope1-status"></p>
         </form>
@@ -688,12 +688,9 @@
           <div id="scope1-result-value" style="font-size:1.4rem; font-weight:700; margin-top:4px;">—</div>
           <div class="muted small" id="scope1-factor-details" style="margin-top:6px;"></div>
           <p class="muted small" id="scope1-disclosure" style="margin-top:8px;"></p>
-        </div>
-
-        <div class="notice" id="scope1-disclosure-list" style="margin-top:12px;"></div>
-        <div class="scope1-entries">
-          <strong>Saved Scope 1 entries</strong>
-          <div id="scope1-entries-list" class="stack"></div>
+          <div class="cta-row" style="margin-top:12px; justify-content:flex-start;">
+            <button type="button" class="btn primary" id="scope1-save" disabled>Save Scope 1 record</button>
+          </div>
         </div>
       </div>
     </section>
