--- a/exports.html
+++ b/exports.html
@@ -58,6 +58,38 @@
     .actions { display: flex; gap: 10px; flex-wrap: wrap; }
     .status { font-size: 0.95rem; color: var(--muted); min-height: 20px; }
     .note { font-size: 0.9rem; color: var(--muted); }
+    .tab-header {
+      display: flex;
+      gap: 8px;
+      padding: 8px;
+      border-radius: 14px;
+      background: #f1f5f9;
+      border: 1px solid #e5e7eb;
+      margin: 0 0 16px;
+      flex-wrap: wrap;
+      width: 100%;
+    }
+    .tab-button {
+      border: 1px solid transparent;
+      background: transparent;
+      color: var(--muted);
+      padding: 12px 18px;
+      border-radius: 12px;
+      font-weight: 800;
+      font-size: 1rem;
+      cursor: pointer;
+      flex: 1;
+      min-width: 220px;
+      text-align: center;
+    }
+    .tab-button.active {
+      background: #ffffff;
+      color: var(--ink);
+      border-color: #cbd5e1;
+      box-shadow: 0 6px 16px rgba(15, 23, 42, 0.08);
+    }
+    .tab-panel { display: none; }
+    .tab-panel.active { display: block; }
 
     @media (max-width: 980px) {
       .app-layout { flex-direction: column; }
@@ -110,7 +142,13 @@
       </header>
 
       <div class="shell">
-        <section class="card stack">
+        <div class="tab-header">
+          <button type="button" class="tab-button active" data-tab-target="scope2">Scope 2 electricity</button>
+          <button type="button" class="tab-button" data-tab-target="scope1">Scope 1 natural gas</button>
+        </div>
+
+        <div class="tab-panel active" data-tab="scope2">
+          <section class="card stack">
           <div>
             <label>Company</label>
             <div id="companyName" class="muted">Loading…</div>
@@ -127,37 +165,40 @@
             <span class="status" id="exportStatus"></span>
           </div>
           <p class="note">Calculated using location-based Scope 2 electricity factors (tCO₂e); market-based uses RECs/PPAs where provided. <a href="methodology.html">See Methodology</a>.</p>
-        </section>
+          </section>
 
-        <section class="card stack" style="margin-top:14px;">
-          <div>
-            <h2 style="margin:0 0 6px;">Scope 1 (Stationary combustion — Natural gas)</h2>
-            <p class="muted">Export Scope 1 natural gas entries saved to your account.</p>
-          </div>
-          <div>
-            <label for="scope1ExportYear">Reporting year</label>
-            <select id="scope1ExportYear">
-              <option value="">All years</option>
-            </select>
-          </div>
-          <div class="actions">
-            <button class="btn primary" id="exportScope1Csv">Generate Scope 1 CSV</button>
-            <span class="status" id="scope1ExportStatus"></span>
-          </div>
-          <p class="note">Scope 1 emissions are estimates based on user-provided fuel data. Results may be partial and do not represent full Scope 1 coverage.</p>
-          <p class="note">Methodology: <a href="methodology.html#scope-1">See Scope 1 methodology</a>.</p>
-        </section>
+          <section class="card" style="margin-top:14px;">
+            <h3 style="margin-top:0;">What’s included</h3>
+            <ul class="muted" style="padding-left:18px; margin:8px 0 0;">
+              <li>Company name and region</li>
+              <li>Period (YYYY-MM) and electricity usage (kWh)</li>
+              <li>Location-based and market-based Scope 2 electricity emissions (tCO₂e)</li>
+              <li>Emission factor value, year, and source</li>
+              <li>Disclosure: “Location-based Scope 2 electricity calculation aligned with the GHG Protocol.”</li>
+            </ul>
+          </section>
+        </div>
 
-        <section class="card" style="margin-top:14px;">
-          <h3 style="margin-top:0;">What’s included</h3>
-          <ul class="muted" style="padding-left:18px; margin:8px 0 0;">
-            <li>Company name and region</li>
-            <li>Period (YYYY-MM) and electricity usage (kWh)</li>
-            <li>Location-based and market-based Scope 2 electricity emissions (tCO₂e)</li>
-            <li>Emission factor value, year, and source</li>
-            <li>Disclosure: “Location-based Scope 2 electricity calculation aligned with the GHG Protocol.”</li>
-          </ul>
-        </section>
+        <div class="tab-panel" data-tab="scope1">
+          <section class="card stack">
+            <div>
+              <h2 style="margin:0 0 6px;">Scope 1 (Stationary combustion — Natural gas)</h2>
+              <p class="muted">Export Scope 1 natural gas entries saved to your account.</p>
+            </div>
+            <div>
+              <label for="scope1ExportYear">Reporting year</label>
+              <select id="scope1ExportYear">
+                <option value="">All years</option>
+              </select>
+            </div>
+            <div class="actions">
+              <button class="btn primary" id="exportScope1Csv">Generate Scope 1 CSV</button>
+              <span class="status" id="scope1ExportStatus"></span>
+            </div>
+            <p class="note">Scope 1 emissions are estimates based on user-provided fuel data. Results may be partial and do not represent full Scope 1 coverage.</p>
+            <p class="note">Methodology: <a href="methodology.html#scope-1">See Scope 1 methodology</a>.</p>
+          </section>
+        </div>
       </div>
       <footer class="muted" style="text-align:center; padding:16px 0 24px; font-size:0.95rem;">
         <!-- Trust signals in footer: methodology, support, and factor freshness -->
