Align Scope 2 export header

--- a/exports.html
+++ b/exports.html
@@ -150,8 +150,8 @@
         <div class="tab-panel active" data-tab="scope2">
           <section class="card stack">
           <div>
-            <label>Company</label>
-            <div id="companyName" class="muted">Loading…</div>
+            <h2 style="margin:0 0 6px;">Scope 2 (Electricity)</h2>
+            <p class="muted">Export Scope 2 electricity records for reporting and audits.</p>
           </div>
           <div>
             <label for="exportYear">Reporting year</label>
