Update exports and methodology copy

--- a/exports.html
+++ b/exports.html
@@ -170,11 +170,11 @@
           <section class="card" style="margin-top:14px;">
             <h3 style="margin-top:0;">What’s included</h3>
             <ul class="muted" style="padding-left:18px; margin:8px 0 0;">
-              <li>Company name and region</li>
-              <li>Period (YYYY-MM) and electricity usage (kWh)</li>
-              <li>Location-based and market-based Scope 2 electricity emissions (tCO₂e)</li>
-              <li>Emission factor value, year, and source</li>
-              <li>Disclosure: “Location-based Scope 2 electricity calculation aligned with the GHG Protocol.”</li>
+              <li>Scope 2: period (YYYY-MM), electricity usage (kWh), and location-based/market-based emissions (tCO₂e)</li>
+              <li>Scope 2 emission factor value, year, and source</li>
+              <li>Scope 1: period (YYYY-MM), fuel quantity, unit, and emissions (tCO₂e)</li>
+              <li>Scope 1 emission factor value, year, and source</li>
+              <li>Disclosure statements for Scope 1 and Scope 2 exports</li>
             </ul>
           </section>
         </div>
