--- a/methodology.html
+++ b/methodology.html
@@ -34,71 +34,53 @@
 
     <!-- Scope coverage clarity -->
     <section>
-      <h2>1. Scope Covered</h2>
-      <p>CarbonWise supports Scope 2 greenhouse gas emissions from purchased electricity. Scope 2 calculations use the location-based method by default, and optional market-based adjustments may be applied when users provide information. Additional scopes or market-based capabilities may be added in the future.</p>
+      <h2>Scope Covered</h2>
+      <p>CarbonWise supports Scope 2 emissions from purchased electricity and Scope 1 emissions from stationary natural gas combustion. Each scope has its own inputs, factors, and disclosures.</p>
+    </section>
+
+    <section id="scope-2">
+      <h2>Scope 2 Methodology (Electricity)</h2>
+      <p><strong>Inputs</strong></p>
+      <p class="muted">Monthly electricity usage (kWh), billing month/year, and country/region.</p>
+      <p><strong>Calculation</strong></p>
+      <p class="muted">Location-based Scope 2 emissions are calculated by multiplying kWh by the grid emission factor for the selected location.</p>
+      <p><strong>Emission factors</strong></p>
+      <p class="muted">Factors represent average grid emissions intensity by country/region. They are sourced from public, government-issued datasets and are year-stamped.</p>
+      <p><strong>Factor year alignment</strong></p>
+      <p class="muted">Grid factors are published after the year they describe. CarbonWise may use the most recent final factor if an exact year match is unavailable.</p>
+      <p><strong>Location-based vs market-based</strong></p>
+      <p class="muted">Location-based is the default. Market-based adjustments are optional and user-declared (RECs/PPAs). Uncovered electricity remains location-based.</p>
+      <p class="muted">CarbonWise does not verify certificates, contracts, or registry claims. Market-based results are estimates intended for internal reporting.</p>
     </section>
 
     <section id="scope-1">
-      <h2>Scope 1 (Stationary combustion — Natural gas)</h2>
-      <p>CarbonWise provides a Scope 1 estimate for stationary combustion of natural gas at owned or controlled facilities. This module is designed for small teams starting basic reporting.</p>
+      <h2>Scope 1 Methodology (Stationary combustion — Natural gas)</h2>
       <p><strong>What is included</strong></p>
       <p class="muted">Stationary combustion only, natural gas, owned/controlled facilities, and heating/boilers/furnaces/generators with regular metered usage.</p>
       <p><strong>What is excluded</strong></p>
       <p class="muted">Mobile combustion, fugitive emissions, process emissions, backup generators with irregular usage (unless metered), personal fuel use, and shared buildings without clear allocation.</p>
-      <p><strong>Data assumptions</strong></p>
-      <p class="muted">Estimates rely on the monthly fuel quantity and facility location you provide. No bill uploads or device-level data are required.</p>
+      <p><strong>Inputs</strong></p>
+      <p class="muted">Monthly fuel quantity, unit, billing month/year, and facility location.</p>
+      <p><strong>Calculation</strong></p>
+      <p class="muted">Scope 1 emissions are calculated by multiplying the reported fuel quantity by the applicable stationary combustion factor for the location and unit.</p>
+      <p><strong>Emission factors</strong></p>
+      <p class="muted">Factors are sourced from public, government-issued datasets and are year-stamped.</p>
       <p><strong>Estimation limitations</strong></p>
       <p class="muted">Results are partial and may omit other Scope 1 sources. Factors are simplified and are not a full inventory or verification.</p>
-      <p><strong>Difference from Scope 2</strong></p>
-      <p class="muted">Scope 1 covers direct fuel combustion at owned or controlled facilities, while Scope 2 covers indirect emissions from purchased electricity. They are reported separately.</p>
     </section>
 
-    <!-- Plain-language inputs and formula -->
     <section>
-      <h2>2. Calculation Method</h2>
-      <p>Calculations use the information you provide: electricity used in kilowatt-hours and your country or region. Location-based emissions are estimated by multiplying your electricity usage by the grid emission factor for that location.</p>
-    </section>
-
-    <!-- Factor sourcing overview -->
-    <section>
-      <h2>3. Emission Factors</h2>
-      <p>Emission factors represent average grid emissions intensity for a country or region. They vary by geography, are sourced from publicly available, government-issued datasets, and are year-stamped.</p>
-    </section>
-
-    <!-- Timing and year alignment explanation -->
-    <section>
-      <h2>4. Emission Factor Year & Timing</h2>
-      <p>Grid emission factors are published after the year they describe. CarbonWise may use the most recently available factor even if it does not match the activity year. This timing gap can create a mismatch between the billing period and the factor year.</p>
-    </section>
-
-    <!-- Location-based default clarity -->
-    <section>
-      <h2>5. Location-Based Scope 2</h2>
-      <p>Location-based Scope 2 reflects average emissions from the grid where electricity is used. It does not account for contractual renewable energy purchases. This is the default method used by CarbonWise.</p>
-    </section>
-
-    <!-- Market-based option clarity -->
-    <section>
-      <h2>6. Market-Based Scope 2 (RECs / PPAs)</h2>
-      <p>CarbonWise supports optional, user-declared market-based Scope 2 adjustments. Users may specify the portion of electricity covered by instruments such as Renewable Energy Certificates (RECs) or Power Purchase Agreements (PPAs). Covered electricity is treated as market-based; uncovered electricity continues to use location-based emission factors.</p>
-      <p class="muted">CarbonWise does not verify certificates, contracts, or registry claims. All market-based inputs are user-declared. Market-based results are estimates intended for internal reporting and preparation.</p>
-    </section>
-
-    <!-- Precision and comparability note -->
-    <section>
-      <h2>7. Precision, Rounding, and Comparability</h2>
+      <h2>Precision, Rounding, and Comparability</h2>
       <p>Calculations retain reasonable numeric precision. Results may differ from other tools because of emission factor selection, year alignment, or rounding conventions.</p>
     </section>
 
-    <!-- Intended use statement -->
     <section>
-      <h2>8. Intended Use & Limitations</h2>
+      <h2>Intended Use & Limitations</h2>
       <p>CarbonWise supports internal reporting, planning, and disclosure preparation. It does not replace third-party verification or formal assurance, and users remain responsible for final reporting decisions.</p>
     </section>
 
-    <!-- Updates transparency -->
     <section>
-      <h2>9. Updates & Changes</h2>
+      <h2>Updates & Changes</h2>
       <p>Emission factors and methodology may be updated as new data becomes available. Significant changes will be documented so you can understand what changed and why.</p>
     </section>
 
