Update tests for Scope 1/2 changes

--- a/records.html
+++ b/records.html
@@ -444,7 +444,11 @@
             <th>Actions</th>
           </tr>
         </thead>
-        <tbody id="recordsTable"></tbody>
+        <tbody id="recordsTable">
+          <tr>
+            <td colspan="3" style="color:#4b5563;">Log in on the main page to view your records.</td>
+          </tr>
+        </tbody>
       </table>
       <p class="note">Calculated using location-based factors (tCO₂e) for display. <a href="methodology.html">See Methodology</a>.</p>
     </section>
