Fix privacy copy and records auth messaging

--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
       <h2>Privacy & trust</h2>
       <ul>
         <li>No uploads. We never ask for bills or PDFs.</li>
-        <li>Calculate without an account. Log in only to save or export.</li>
+        <li>Calculate without an account. Log in only to save Scope 1 or Scope 2 records.</li>
         <li>We only store what you save to your account. No extra personal data.</li>
         <li>Scope 2 electricity factors from EPA / DEFRA — transparent and explainable.</li>
         <li>Scope 1 natural gas factors from public government sources — transparent and explainable.</li>
