Ensure future month alert triggers on submit

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         <button type="button" class="tab-button" data-tab-target="scope1">Scope 1 natural gas</button>
       </div>
       <div class="tab-panel active" data-tab="scope2">
-        <form id="carbon-form" class="stack">
+        <form id="carbon-form" class="stack" novalidate>
         <div class="two-col">
           <div>
             <label for="persona">Who are you?</label>
