Handle Scope 2 calculate via button click

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           No portals, no jargon - just a clear estimate. No uploads. Calculate without an account; sign in only to save or export. Uses public EPA/DEFRA factors. Informational, not a filing.
         </div>
         <div class="cta-row" style="justify-content:flex-start;">
-          <button type="submit" class="btn primary">See my Scope 2 electricity emissions</button>
+          <button type="button" class="btn primary" id="scope2-calc-btn">See my Scope 2 electricity emissions</button>
         </div>
         <div class="notice" style="margin-top:10px;">
           <label style="display:flex;align-items:center;gap:8px;font-weight:600;">
